--- a/Frontal.html
+++ b/Frontal.html
@@ -1,16 +1,28 @@
 
-<html>
-    <h1>
-        Hey, I'm Rudra Narayan Mohapatro
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am 3rd Year CSE Graduate from NIT Rourkela having peak enthusiasm as a coder,hacker,gamer and many more things.
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            I'm obsessed with Cybersecurity,And pursuing knowledge about the domain
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rudra Narayan Mohapatro</title>
+</head>
+<body>
+    <header>
+        <h1>Hey, I'm Rudra Narayan Mohapatro</h1>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>
+                I am a 3rd Year CSE Graduate from NIT Rourkela with a strong enthusiasm for coding, hacking, gaming, and many other activities.
+            </p>
+        </section>
+        <section>
+            <h2>What I'm Working On</h2>
+            <p>
+                I'm passionate about Cybersecurity and am actively pursuing knowledge in this domain.
+            </p>
+        </section>
+    </main>
+</body>
 </html>
